# AutoVideo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  bullets.yaml  config.yaml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2.0.0-BROWSER-VERIFICATION.md  v2.0.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.60.0-MILESTONE-AUDIT.md  v1.60.0-REQUIREMENTS.md  v1.60.0-ROADMAP.md  v2.0.0-MILESTONE-AUDIT.md  v2.0.0-REQUIREMENTS.md  v2.0.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-llm-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-slides-auto/: 03-01-PLAN.md  03-02-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-voz-subtitulos/: 04-01-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md
.planning/phases/05-montaje-qa/: 05-01-PLAN.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-slides-hybrid-verificador/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/07-empaquetado-tests-docs/: 07-02-PLAN.md  07-02-SUMMARY.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-backend-integrations/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-SUMMARY.md  08-05-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-REVIEW.md
.planning/phases/09-ui-foundation/: 09-02-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-CONTEXT.md  09-VERIFICATION.md
.planning/phases/10-contenido-page/: 10-01-SUMMARY.md  10-02-SUMMARY.md  10-03-SUMMARY.md  10-VERIFICATION.md
.planning/phases/11-guion-slides-pages/: 11-02-SUMMARY.md  11-UAT.md  11-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-pexels-image-source.md  SEED-002-steerable-variation.md
.streamlit/: config.toml
examples/demo-presupuesto/: README.md  bullets.yaml
src/avideo/: __init__.py  cli.py  orchestrator.py
src/avideo/models/: __init__.py  (+15 more)
tests/: conftest.py  test_align.py  test_anthropic_integration.py  test_assemble.py  test_audio_enhance.py  test_bridge.py  test_bullets.py  test_bullets_gen.py  test_cli.py  test_config_phase8.py  test_context.py  test_cost_estimator.py  test_duration_parse.py  test_elevenlabs.py  test_extras_pipeline_ops.py  test_ffmpeg_music.py  test_image_utils.py  test_models.py  test_orchestrator.py  test_page_smoke.py  test_phase1_contenido.py  test_pipeline_ops.py  test_scriptwriter.py  test_seed002_feedback.py  test_slides_auto.py  test_slides_hybrid.py  test_slides_manual.py  test_slides_render.py  test_storyboard.py  test_subtitles.py  test_theme.py  test_timing.py  test_timings_model.py  test_ui_state.py  test_ui_wizard_e2e.py  test_verify_slides.py  test_voice_elevenlabs.py  test_voice_openai.py  test_voice_record.py  test_voz_pipeline_ops.py  (+3 more)
(+136 files in other folders)
