[project]
name = "avideo"
version = "0.1.0"
description = "Pipeline CLI to generate narrated videos from bullet points"
authors = [
    { name = "jaimeberdejo", email = "jbs1902@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "typer>=0.25.1",
    "rich>=15.0.0",
    "pyyaml>=6.0.3",
    "anthropic>=0.104.1",
    "pymupdf>=1.27.2.3",
    "python-pptx>=1.0.2",
    "playwright>=1.60.0",
    "jinja2>=3.1.6",
    "python-lucide>=0.2.24",
    "elevenlabs>=2.49.0",
    "openai>=2.38.0",
    "python-dotenv>=1.0",
]

# Optional extra for the 'record' voice mode (sounddevice/soundfile/whisperx + torch).
# IMPORTANT: torch is pinned to 2.5.1 in production because torch>=2.6 changes
# weights_only=True by default in torch.load, breaking pyannote VAD model loading in
# whisperx (see 04-RESEARCH.md Pitfall 2).  For local production installs, use:
#   pip install torch==2.5.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cpu
#   pip install "avideo[record]"
# Install with: uv sync --extra record  (requires torch pre-installed)
# NOTE: do NOT add these to [project.dependencies] — avoids ~2GB torch in the default
# elevenlabs path and CI.
[project.optional-dependencies]
record = [
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "whisperx>=3.8.5",
    # torch==2.5.1 and torchaudio==2.5.1 MUST be installed BEFORE whisperx.
    # They are NOT listed here because whisperx's own metadata specifies torchaudio>=2.8
    # for Python 3.12, creating an unsolvable constraint when pip resolves the entire extra
    # together.  Install torch first manually:
    #   pip install torch==2.5.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cpu
    # See 04-RESEARCH.md Pitfall 2 for why torch==2.5.1 is the required pin.
]

[project.scripts]
avideo = "avideo.cli:app"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=8.0",
    "pytest-mock>=3.0",
]
